# spin-system-simulations

./: Manifest.toml  Project.toml  README.md  pyproject.toml
Ising_spin_glass/julia_version/: IsingSpinGlassCore.jl  simulate_Ising_spin_glass.ipynb
Ising_spin_grass/: README.md
heat_capacity_optimize/: IsingCore.jl  evaluate_acceptance_probs.ipynb  optimize_ind_N_12.ipynb  optimize_ind_N_6.ipynb  optimize_mh.ipynb  test_parallel_tempering.ipynb
logger/: logger.py
